# CRGone

./: .gitignore  CMakeLists.txt  README.md
include/: decomposition.hpp  fileops.hpp  instance.hpp  mycbcheuristic.hpp  myscipconshdlr.hpp  myscipheuristic.hpp  partition.hpp  preprocess.hpp  readdata.hpp  scc.hpp  separate.hpp  solvecbc.hpp  util.hpp
src/: ModDecomp.cpp  decomposition.cpp  fileops.cpp  mycbcheuristic.cpp  myscipconshdlr.cpp  myscipheuristic.cpp  olcmexact.cpp  partition.cpp  preprocess.cpp  readdata.cpp  scc.cpp  separate.cpp  solvecbc.cpp  solveilponly.cpp  solvescip.cpp
